== Changelog

=== 3.4 (Planned to 2x.02.2016)
* #296 Can set browser version with system property `-Dselenide.browser.version=8`
* Upgraded to selenium-java 2.52.0, changelog: http://selenium2.ru/news/170-selenium-252.html
* Typo in property name selenide.collectionsTimeout fixed

=== 3.3 (Released 10.02.2016)
* #277 Ajax support for collections:
  Collection methods (operator $$) wait if collection elements get loaded asynchronously
* added collectionsPollingInterval (defaults to 0,2 s) and collectionsTimeout (defaults to 6 s) to configuration params
* Upgraded to selenium-java 2.51.0

=== 3.2 (Released 29.01.2016)
* #275 Added method for selecting option by index: `$("select").selectOption(3)`
* #272 Add setting "selenide.browser-size" to configure browser window size
* Fixed Bug in showing Selenium WebDriver version
* Upgraded to selenium-java 2.50.0, changelog: https://github.com/SeleniumHQ/selenium/blob/master/java/CHANGELOG

=== 3.1.3 (Released 22.01.2016)
* Upgraded to selenium-java 2.49.1 (fixed timeout issue in Grid)
* Added INFO about Selenide and Selenium WebDriver Versions in use

=== 3.1.2 (Released 19.01.2016)
* value-Condition checked for substring containing again (in 3.1-3.1.1 - was exact match)

=== 3.1.1 (Released 18.01.2016)
* Renamed FAILED->FAIL, PASSED->PASS in the print/log output to avoid confusion with PASSED and FAILED of external tools
* Added INFO about Browser/Version/Platform for the started browser to the logs

* exclude old selenium-remote-driver and selenium-java transitive dependencies (coming from phantomjsdriver 1.2.1)

=== 3.1 (Released 17.01.2016)
* Update documentation
* #263 Now Selenide does **not** allow to download file via invisible link
* #206 Method `switchTo(alert())` now waits until alert appears
* #206 Method `switchTo(frame())` now waits until frame appears
* #271 Method `switchTo(window())` now waits until window/tab appears